fixed gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(1, 200px);
   justify-content: center;
-  gap: 48px 48px;
+  gap: 48px;
 
   @media (min-width: 488px) {
     grid-template-columns: repeat(2, 200px);
